# pluck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.githooks/: pre-commit
.github/workflows/: CI.yml
.readme/: README.ipynb  convert.sh
.run/: Tests.run.xml
rust/: arrow_out.rs  extract.rs  lib.rs  normalize.rs  walker.rs
src/pluck/: __init__.py  _client.py  _decorators.py  _engine.py  _errors.py  _exceptions.py  _execution.py  _json.py  _libraries.py  _normalization.py  _parser.py  _pluck.py  client.py  libraries.py
tests/: __init__.py  conftest.py  test_create.py  test_frameless.py  test_json_path.py  test_normalization.py  test_normalize.py  test_performance.py  test_pluck.py  test_pluck_response.py  test_queries.py  test_read_graphql.py  test_response.py  test_responses.py  test_scenarios.py  test_urllib_client.py
tests/scenarios/: alias_field_with_frame.expected.json  alias_field_with_frame.graphql  alias_field_with_frame.json  alias_fields.expected.json  alias_fields.graphql  alias_fields.json  always_returns_frames.expected.json  always_returns_frames.json  column_names_is_not_case_sensitive.expected.json  column_names_is_not_case_sensitive.graphql  column_names_is_not_case_sensitive.json  column_names_is_not_case_sensitive.py  combined_frame.expected.json  combined_frame.graphql  combined_frame.json  frame_on_scalar_field.expected.json  frame_on_scalar_field.graphql  implicit_mode.expected.json  implicit_mode.graphql  implicit_mode.json  kitchen_sink.expected.json  kitchen_sink.graphql  kitchen_sink.json  multiple_frames_and_column_names.expected.json  multiple_frames_and_column_names.graphql  multiple_frames_and_column_names.json  multiple_frames_and_column_names.py  multiple_root_frames.expected.json  multiple_root_frames.graphql  multiple_root_frames.json  nested_frames.expected.json  nested_frames.graphql  nested_frames.json  short_column_names.expected.json  short_column_names.graphql  short_column_names.json  short_column_names_with_alias.expected.json  short_column_names_with_alias.graphql  short_column_names_with_alias.json  short_column_names_with_conflict.expected.json  (+9 more)
