[project]
name = "pluck-graphql"
version = "0.4.0"
description = "Transform GraphQL queries into Pandas data-frames."
readme = "README.md"
authors = [{ name = "Martin Galpin", email = "galpin@gmail.com" }]
license = { text = "MIT License" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
]
dependencies = [
    "pandas>=1.4",
    "graphql-core>=3.2.1,<4",
]

[project.urls]
Repository = "https://github.com/galpin/pluck"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "httpretty>=1.1.4",
    "isort>=5.10.1",
    "twine>=4.0.1",
    "jupyter>=1.0.0",
    "nbconvert>=7.9.2",
    "tabulate>=0.9.0",
    "ruff>=0.4.3",
]

[build-system]
requires = ["uv_build>=0.7.2,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "pluck"

[tool.ruff.lint]
extend-select = ["I"]
