[metadata]
name = pluck
version = 0.1.0
author = Martin Galpin
author_email = galpin@gmail.com
description = DataFrames from GraphQL responses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/galpin/pluck
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
