[metadata]
name = pluck-graphql
version = 0.1.3
author = Martin Galpin
author_email = galpin@gmail.com
description = Transform GraphQL queries into Pandas data-frames.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/galpin/pluck
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.8
install_requires =
    graphql-core>=3.2.0
    pandas>=1.0.0

[options.packages.find]
where = src
